--- a/index.html
+++ b/index.html
@@ -67,13 +67,10 @@
         <li><i class="fa-solid fa-calendar"></i> Výber dátumu</li>
         <li><i class="fa-solid fa-clock"></i> Dostupné časy</li>
       </ul>
-      <a href="register.html" class="vbook-btn full-width">
+      <a href="bez-prihlasenia.html" class="vbook-btn full-width">
     Pokračovať
   </a>
-
-  <a href="bez-prihlasenia.html" class="vbook-btn-outline full-width">
-    Pokračovať bez prihlásenia
-  </a>
+  
     </div>
 
   </div>
