--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li><i class="fa-solid fa-calendar"></i> Výber dátumu</li>
         <li><i class="fa-solid fa-clock"></i> Dostupné časy</li>
       </ul>
-      <a href="bez-prihlasenia.html" class="vbook-btn full-width">
+      <a href="demo.html" class="vbook-btn full-width">
     Pokračovať
   </a>
   
@@ -103,3 +103,4 @@
 
 </body>
 </html>
+
