--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- HERO -->
 <section class="vbook-section hero"
-  style="background-image:url('images/obrazok1.jpg');
+  style="background-image:url('obrazok1.jpg');
          background-size:cover;
          background-position:center;
          background-repeat:no-repeat;">
@@ -96,3 +96,4 @@
 
 </body>
 </html>
+
