--- a/demo.html
+++ b/demo.html
@@ -54,6 +54,8 @@
         <input type="checkbox" id="wed" value="Wed"><label for="wed">Streda</label>
         <input type="checkbox" id="thu" value="Thu"><label for="thu">Štvrtok</label>
         <input type="checkbox" id="fri" value="Fri"><label for="fri">Piatok</label>
+        <input type="checkbox" id="sat" value="Sat"><label for="sat">Sobota</label>
+        <input type="checkbox" id="sun" value="Sun"><label for="sun">Nedeľa</label>
       </div>
 
       <div class="time-range">
@@ -121,3 +123,4 @@ function createLink() {
 
 </body>
 </html>
+
