--- a/booking.html
+++ b/booking.html
@@ -59,12 +59,12 @@
 </section>
 
 <script>
-/* ===== PARAMETRE ===== */
+/*PARAMETRE*/
 const params = new URLSearchParams(window.location.search);
 serviceName.innerText = params.get("name") || "Rezervácia";
 serviceDesc.innerText = params.get("desc") || "";
 
-/* ===== KALENDÁR ===== */
+/*KALENDÁR*/
 const calendar = document.getElementById("calendar");
 const monthLabel = document.getElementById("monthLabel");
 
@@ -116,7 +116,7 @@ document.getElementById("nextMonth").onclick = () => {
 
 renderCalendar();
 
-/* ===== ČAS ===== */
+/*ČAS*/
 const morning = ["09:00","09:15","09:30","09:45","10:00","10:15","10:30","10:45","11:00","11:15","11:30","11:45"];
 const afternoon = ["12:00","12:15","12:30","12:45","13:00","13:15","13:30","14:00","14:15","14:30","14:45","15:00","15:15","15:30","15:45","16:00","16:15","16:30","16:45"];
 
@@ -141,3 +141,4 @@ renderTimes(afternoon, "timeAfternoon");
 
 </body>
 </html>
+
